--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-json-view-compare": "^2.0.2",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
